Add tools using an ADD statement
Signed-off-by: Matthew Ballance <matt.ballance@gmail.com>

--- a/dv-tools/Dockerfile
+++ b/dv-tools/Dockerfile
@@ -1,22 +1,7 @@
 FROM centos:latest
 
+ADD tools /tools
 RUN dnf -y install gcc gcc-c++ make python3-devel bzip2 xz tcl tk readline \
     perl
-
-
-#********************************************************************
-#* Build and install Icarus
-#********************************************************************
-RUN cd / ; tar xvzf /dv-tools/tools.tar.gz
-#RUN make BUILD_DIR=/build INSTALL_GLOBAL=true -f /dv-tools/Makefile /build/cmake.build ; \
-#    rm -rf /build ; which cmake
-#RUN make BUILD_DIR=/build INSTALL_GLOBAL=true -f /dv-tools/Makefile /build/verilator.build ; \
-#    rm -rf /build
-#RUN make BUILD_DIR=/build INSTALL_GLOBAL=true -f /dv-tools/Makefile /build/icarus.build ; \
-#    rm -rf /build
-#RUN dnf install -y readline-devel libffi-devel
-#RUN make BUILD_DIR=/build INSTALL_GLOBAL=true -f /dv-tools/Makefile /build/sby.build ; \
-#    rm -rf /build
-   
 
 
