--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
         docker run --volume `pwd`/dv-tools:/dv-tools fw-dv-tools-build /dv-tools/build.sh
     - name: Build Tools Image
       run: |
-        docker build -t fw-dv-tools --volume `pwd`/dv-tools:/dv-tools dv-tools
+        cd dv-tools
+        tar xvzf tools.tar.gz
+        docker build -t fw-dv-tools dv-tools
     - name: Push Image
       run: |
         echo ${{ secrets.GHCR_PAT }} | docker login ghcr.io -u mballance --password-stdin
