Fixup path issue
Signed-off-by: Matthew Ballance <matt.ballance@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,12 @@ jobs:
     - name: Build Tools
       run: |
         docker run --volume `pwd`/dv-tools:/dv-tools fw-dv-tools-build /dv-tools/build.sh
-    - name: Build Tools Image
+    - name: Unpack Tools
       run: |
         cd dv-tools
         tar xvzf tools.tar.gz
+    - name: Build Tools Image
+      run: |
         docker build -t fw-dv-tools dv-tools
     - name: Push Image
       run: |
