Ensure git is installed
Signed-off-by: Matthew Ballance <matt.ballance@gmail.com>

--- a/dv-tools/Dockerfile
+++ b/dv-tools/Dockerfile
@@ -2,6 +2,6 @@ FROM centos:latest
 
 ADD tools /tools
 RUN dnf -y install gcc gcc-c++ make python3-devel bzip2 xz tcl tk readline \
-    perl
+    perl git
 
 
